gatekeeper/mybanknamespace/deploy-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample
  labels:
    bad-environment: eng
    bad-application: sample
