gatekeeper/mybanknamespace/deploy-constraint-template.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: mybanknamespace
  namespace: gatekeeper
spec:
  crd:
    spec:
      names:
        kind: MybankNamespace
      validation:
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package mybanknamespace

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("Namespace resources must include labels: %v", [missing])
        }
